--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
+
 body {
-    font-family: 'Poppins', sans-serif; 
+    font-family: 'Poppins', sans-serif;
 }
-#main-table{
-    width:600px;
+
+#main-table {
+    width: 600px;
     margin: auto;
 }
-#main-table table{
+
+#main-table table {
     width: 100%;
 }
 
-#title{
+#title {
     height: 332px;
-    background: url("../images/dancer-bg.png");
+    background: url("./images/dancer-bg.png");
 }
-#title td{
+
+#title td {
     padding-left: 25px;
     padding-top: 35px;
     color: #fff;
 }
 
-#register{
+#register {
     padding: 5px;
     width: 130px;
     background-color: #e8631c;
@@ -33,83 +37,93 @@ body {
     font-size: 10px;
 }
 
-#country{
+#country {
     height: 401px;
-    background: url("../images/t2-bg.png");
+    background: url("./images/t2-bg.png");
     color: #fff;
 }
-.cnty1{
-    padding: 20px; 
+
+.cnty1 {
+    padding: 20px;
 }
 
-#pricing{
+#pricing {
     background-color: #303030;
     color: #fff;
 }
-.price{
+
+.price {
     text-align: center;
     padding: 10px;
 }
-.price p{
+
+.price p {
     font-size: 10px;
 }
-.price button{
+
+.price button {
     padding: 3px 35px;
-    background-color:#303030;
+    background-color: #303030;
     color: #fff;
     border: 0px;
     border-radius: 2px;
 }
-.card{
-    background-color: #e8631c   ;
+
+.card {
+    background-color: #e8631c;
     border-radius: 5px;
     padding: 10px;
 }
-.card tr td{
-    padding:10px
+
+.card tr td {
+    padding: 10px
 }
-.card img{
+
+.card img {
     padding-top: 16px;
 
 }
 
-#more{
+#more {
     color: #fff;
     text-align: center;
 }
-#more td{
+
+#more td {
     height: 399px;
     border: 0px;
 }
-#more p{
+
+#more p {
     font-size: 10px;
 }
 
-#stat{
+#stat {
     background-color: #303030;
     height: 402px;
     color: #fff;
     text-align: center;
 }
-.analyst{
+
+.analyst {
     padding-bottom: 20px;
 }
 
-#model{
+#model {
     height: 405px;
     color: #fff;
-    background: url("../images/model.png");
+    background: url("./images/model.png");
     text-align: center;
 }
 
-#subs{
+#subs {
     height: 246px;
     color: #fff;
     background-color: #e8631c;
     text-align: center;
 }
 
-#sub{
+#sub {
     background-color: #303030;
     color: #fff;
     padding: 5px;
